--- a/nowplaying.html
+++ b/nowplaying.html
@@ -64,7 +64,7 @@ body {
 <div class="row"> 
   <div class="column">
     <div class=“card”>
-    <a href=“https://apps.apple.com/us/app/pawnbarian/id1510583444?uo=4”><img     src=“https://is2-ssl.mzstatic.com/image/thumb/Purple122/v4/dc/dc/5d/dcdc5d7f-14f8-3350-6f1b-78406d42a71d/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png” style=“width:100%”><p>Pawnbarian</a></br></br>Jan Wojtecki</div>
+    <img src=“https://is2-ssl.mzstatic.com/image/thumb/Purple122/v4/dc/dc/5d/dcdc5d7f-14f8-3350-6f1b-78406d42a71d/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png” style=“width:100%”><a href="https://apps.apple.com/us/app/pawnbarian/id1510583444?uo=4"><p>Pawnbarian</a></br></br>Jan Wojtecki</div>
     <a href=“https://apps.apple.com/us/app/westurn-turn-based-showdowns/id1607697991?uo=4”><img src=“https://is5-ssl.mzstatic.com/image/thumb/Purple122/v4/97/2d/12/972d1241-1c0f-ea72-6352-611779e73447/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png”><p>Westurn: Turn Based Showdowns</a></br>Free</br>Itamar Ernst
 
 </div>
