--- a/nowplaying.html
+++ b/nowplaying.html
@@ -68,6 +68,10 @@ body {
     <a href=“https://apps.apple.com/us/app/westurn-turn-based-showdowns/id1607697991?uo=4”><img src=“https://is5-ssl.mzstatic.com/image/thumb/Purple122/v4/97/2d/12/972d1241-1c0f-ea72-6352-611779e73447/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png”><p>Westurn: Turn Based Showdowns</a></br>Free</br>Itamar Ernst
 
 </div>
+<div class="row"> 
+  <div class="column">
+    <div class="card">
+<a href="https://apps.apple.com/us/app/blacken-slash/id1604646442?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple112/v4/a6/32/aa/a632aaf4-93f8-8d46-b6a9-4b92352985b4/AppIcon-0-0-1x_U007emarketing-0-0-0-5-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p align="center">Blacken Slash</a></br>$4.99</br>Mario Kaiser</div>
 
 
 <div class="row">
@@ -80,7 +84,7 @@ body {
 </div></div>
 <div class="row">
   <div class="column">
-    <div class="card"><p align="center"><a href="https://apps.apple.com/us/app/blacken-slash/id1604646442?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple112/v4/a6/32/aa/a632aaf4-93f8-8d46-b6a9-4b92352985b4/AppIcon-0-0-1x_U007emarketing-0-0-0-5-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p align="center">Blacken Slash</a></br>$4.99</br>Mario Kaiser</div></div>
+    <div class="card"><p align="center"></div>
 <div class="row">
   <div class="column"> 
     <div class="card"><p align="center"><a href="https://apps.apple.com/us/app/paragon-pioneers/id1599308482?uo=4"><img src="https://is2-ssl.mzstatic.com/image/thumb/Purple112/v4/3f/64/a5/3f64a521-2b68-0df9-dec8-54e7b7117ceb/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p align="center">Paragon Pioneers</a></br>$3.99</br>Tobias Tenbusch</div></div>
