--- a/nowplaying.html
+++ b/nowplaying.html
@@ -74,6 +74,7 @@ span.s1 {font-family: 'Helvetica'; font-weight: normal; font-style: normal; font
 </style>
 </head>
 <body>
+<div class="row">
 <p class="p1"><span class="s1">&lt;div class="row"&gt;</span></p>
 <p class="p1"><span class="s1">&lt;div class="column"&gt;&lt;a href="https://apps.apple.com/us/app/pawnbarian/id1510583444? uo=4"&gt;&lt;img src="https://is2-ssl.mzstatic.com/image/thumb/Purple122/v4/dc/dc/5d/ dcdc5d7f-14f8-3350-6f1b-78406d42a71d/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0- sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"&gt;&lt;/p&gt;&lt;p&gt;Pawnbarian&lt;/a&gt;&lt;/ br&gt;&lt;/br&gt;Jan Wojtecki&lt;/div&gt;</span></p>
 <p class="p1"><span class="s1">&lt;div class="column"&gt;&lt;a href="https://apps.apple.com/us/app/westurn-turn-based-showdowns/ id1607697991?uo=4"&gt;&lt;img src="https://is5-ssl.mzstatic.com/image/thumb/Purple122/v4/97/2d/ 12/972d1241-1c0f-ea72-6352-611779e73447/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0- sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"&gt;&lt;/p&gt;&lt;p&gt;Westurn: Turn Based Showdowns&lt;/a&gt;&lt;/br&gt;Free&lt;/br&gt;Itamar Ernst&lt;/div&gt;</span></p>
