--- a/nowplaying.html
+++ b/nowplaying.html
@@ -74,16 +74,18 @@ span.s1 {font-family: 'Helvetica'; font-weight: normal; font-style: normal; font
 </style>
 </head>
 <body>
-<div class="row">
-<p class="p1"><span class="s1">&lt;div class="row"&gt;</span></p>
-<p class="p1"><span class="s1">&lt;div class="column"&gt;&lt;a href="https://apps.apple.com/us/app/pawnbarian/id1510583444? uo=4"&gt;&lt;img src="https://is2-ssl.mzstatic.com/image/thumb/Purple122/v4/dc/dc/5d/ dcdc5d7f-14f8-3350-6f1b-78406d42a71d/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0- sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"&gt;&lt;/p&gt;&lt;p&gt;Pawnbarian&lt;/a&gt;&lt;/ br&gt;&lt;/br&gt;Jan Wojtecki&lt;/div&gt;</span></p>
-<p class="p1"><span class="s1">&lt;div class="column"&gt;&lt;a href="https://apps.apple.com/us/app/westurn-turn-based-showdowns/ id1607697991?uo=4"&gt;&lt;img src="https://is5-ssl.mzstatic.com/image/thumb/Purple122/v4/97/2d/ 12/972d1241-1c0f-ea72-6352-611779e73447/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0- sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"&gt;&lt;/p&gt;&lt;p&gt;Westurn: Turn Based Showdowns&lt;/a&gt;&lt;/br&gt;Free&lt;/br&gt;Itamar Ernst&lt;/div&gt;</span></p>
-<p class="p1"><span class="s1">&lt;div class="column"&gt;&lt;a href="https://apps.apple.com/us/app/blacken-slash/id1604646442? uo=4"&gt;&lt;img src="https://is3-ssl.mzstatic.com/image/thumb/Purple112/v4/a6/32/aa/ a632aaf4-93f8-8d46-b6a9-4b92352985b4/AppIcon-0-0-1x_U007emarketing-0-0-0-5-0-0- sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"&gt;&lt;/p&gt;&lt;p&gt;Blacken Slash&lt;/ a&gt;&lt;/br&gt;.99&lt;/br&gt;Mario Kaiser&lt;/div&gt;</span></p>
-<p class="p1"><span class="s1">&lt;div class="column"&gt;&lt;a href="https://apps.apple.com/us/app/paragon-pioneers/id1599308482? uo=4"&gt;&lt;img src="https://is2-ssl.mzstatic.com/image/thumb/Purple112/v4/3f/64/ a5/3f64a521-2b68-0df9-dec8-54e7b7117ceb/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0- sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"&gt;&lt;/p&gt;&lt;p&gt;Paragon Pioneers&lt;/a&gt;&lt;/br&gt;.99&lt;/br&gt;Tobias Tenbusch&lt;/div&gt;</span></p>
-<p class="p1"><span class="s1">&lt;div class="column"&gt;&lt;a href="https://apps.apple.com/us/app/dicey-dungeons/id1368013995? uo=4"&gt;&lt;img src="https://is2-ssl.mzstatic.com/image/thumb/Purple112/v4/29/66/4e/29664e04-fecf- f75c-a04a-8192b8c9cda9/AppIcon-0-0-1x_U007emarketing-0-0-0-10-0-0-sRGB-0-0-0- GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"&gt;&lt;/p&gt;&lt;p&gt;Dicey Dungeons&lt;/a&gt;&lt;/ br&gt;.99&lt;/br&gt;Distractionware Limited&lt;/div&gt;</span></p>
-<p class="p1"><span class="s1">&lt;div class="column"&gt;&lt;a href="https://apps.apple.com/us/app/netflix-into-the-breach/id1616542180? uo=4"&gt;&lt;img src="https://is3-ssl.mzstatic.com/image/thumb/Purple122/v4/6e/3b/2f/ 6e3b2f5b-73d1-8c7a-89fa-c34add2297cb/AppIcon-1x_U007emarketing-0-10-0-85-220.png/ 512x512bb.png"&gt;&lt;/p&gt;&lt;p&gt;NETFLIX Into the Breach&lt;/a&gt;&lt;/br&gt;Free&lt;/br&gt;Netflix, Inc.&lt;/div&gt;</span></p>
-<p class="p1"><span class="s1">&lt;div class="column"&gt;&lt;a href="https://apps.apple.com/us/app/league-of-legends-wild-rift/ id1480616990?uo=4"&gt;&lt;img src="https://is4-ssl.mzstatic.com/image/thumb/Purple122/v4/60/34/9e/ 60349e8e-d676-19f6-4729-e0f50ce185f5/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0- sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"&gt;&lt;/p&gt;&lt;p&gt;League of Legends: Wild Rift&lt;/a&gt;&lt;/br&gt;Free&lt;/br&gt;Riot Games&lt;/div&gt;</span></p>
-<p class="p1"><span class="s1">&lt;div class="column"&gt;&lt;a href="https://apps.apple.com/us/app/genshin-impact/id1517783697? uo=4"&gt;&lt;img src="https://is3-ssl.mzstatic.com/image/thumb/Purple112/v4/37/08/4d/37084d81-091e- a0d6-c34d-55f830214522/AppIcon-1x_U007emarketing-0-7-0-0-85-220.png/512x512bb.png"&gt;&lt;/ p&gt;&lt;p&gt;Genshin Impact&lt;/a&gt;&lt;/br&gt;Free&lt;/br&gt;COGNOSPHERE PTE. LTD.&lt;/div&gt;</span></p>
-<p class="p1"><span class="s1">&lt;/html&gt;</span></p>
-</body>
-</html>
+
+Pawnbarian Jan Wojtecki
+
+Westurn: Turn Based Showdowns Free Itamar Ernst
+
+Blacken Slash .99 Mario Kaiser
+
+Paragon Pioneers .99 Tobias Tenbusch
+
+Dicey Dungeons.99 Distractionware Limited
+
+NETFLIX Into the Breach Free Netflix, Inc.
+
+League of Legends: Wild Rift Free Riot Games
+Genshin Impact Free COGNOSPHERE PTE. LTD.
