--- a/nowplaying.html
+++ b/nowplaying.html
@@ -74,7 +74,7 @@ span.s1 {font-family: 'Helvetica'; font-weight: normal; font-style: normal; font
 </style>
 </head>
 <body>
-
+<div class="row">
 Pawnbarian Jan Wojtecki
 
 Westurn: Turn Based Showdowns Free Itamar Ernst
@@ -89,3 +89,4 @@ NETFLIX Into the Breach Free Netflix, Inc.
 
 League of Legends: Wild Rift Free Riot Games
 Genshin Impact Free COGNOSPHERE PTE. LTD.
+</html>
