--- a/indexeventually-2.html
+++ b/indexeventually-2.html
@@ -9,7 +9,7 @@
 		<title>Small Screen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main-2.css" />
 	</head>
 	<body class="is-preload">
 <style>
