--- a/indexeventually-2.html
+++ b/indexeventually-2.html
@@ -85,7 +85,7 @@ body {
 <div class="column"><a href="https://apps.apple.com/us/app/genshin-impact/id1517783697?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple112/v4/37/08/4d/37084d81-091e-a0d6-c34d-55f830214522/AppIcon-1x_U007emarketing-0-7-0-0-85-220.png/512x512bb.png"></p><p>Genshin Impact</a></br>Free</br>COGNOSPHERE PTE. LTD.</div>
 
 		<!-- Footer -->
-			<footer id="footer">
+			<div class="row"><footer id="footer">
 				<ul class="icons">
 					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -95,7 +95,7 @@ body {
 				<ul class="copyright">
 					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
-			</footer>
+			</footer></div>
 
 		<!-- Scripts -->
 			<script src="assets/js/main.js"></script>
