--- a/indexeventually-2.html
+++ b/indexeventually-2.html
@@ -93,7 +93,7 @@ body {
 					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li></br>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled.</br>Credits: <a href="http://html5up.net">HTML5 UP</a></li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Untitled.</br>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer></div>
 
