--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			<footer id="footer">
 				<ul class="icons">
 					<li><a href="https://twitter.com/smallscreened" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://youtube.com/user/gcbird2" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
 					<li><a href="https://github.com/smallscreened" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href=mailto:gcbird2@gmail.com class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
