--- a/playing.html
+++ b/playing.html
@@ -68,11 +68,89 @@ body {
     font-size: 30px;
   }
 }
+
+/* Back Button */
+@import "compass/css3";
+
+.back-button {
+	position: absolute;
+  text-indent: -15px;
+  padding: 5px 0 5px 10px;
+  width: 53px;/* modified by label length */
+	overflow: auto;
+}
+.label {
+	display: block;
+  width: auto;
+  line-height: 26px;
+  font-size: 12px;
+  font-weight: 900;
+  font-family: helvetica, sans-serif;
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  @include border-radius (4px);
+  background-color: rgba(239,239,239,1);
+  @include background-image (linear-gradient(top, rgba(255,255,255,1) 0%,rgba(239,239,239,1) 60%,rgba(225,223,226,1) 100%));
+  @include box-shadow(0 1px 3px #cfcfcf);
+  border: 1px solid #bcbcbc;
+  border-left: 0;
+  color: #888; 
+  text-shadow: 0 1px 0 rgba(255,255,255, 0.8);
+	@include single-transition(color,0.1s,linear,0);
+  
+	&:before {
+    float: left;
+    margin-top: 1px;
+    margin-left: -4px;
+    display: block;
+    height: 12px;
+    width: 15px;
+    content: ' ';
+    @include skew(-35deg,0);
+	  background-color: rgba(239,239,239,1);
+    @include background-image (linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 1%,rgba(240,240,240,1) 100%));
+	  border-left: 1px solid #aaa;
+  }
+  &:after {
+    position: relative;
+    margin-top: -13px;
+    margin-bottom: 1px;
+    margin-left: -4px;
+    margin-right: auto;
+    display: block;
+    height: 12px;
+    width: 15px;
+    content: ' ';
+    @include skew(35deg,0);
+	  background-color: rgba(239,239,239,1);
+    @include background-image (linear-gradient(top, rgba(240,240,240,1) 0%,rgba(239,239,239,1) 10%,rgba(225,223,226,1) 100%));
+	  border-left: 1px solid #aaa;
+    @include box-shadow(-2px 1px 2px rgba(100,100,100,0.1));
+  }
+}
+.label:hover {
+  color: hsl(210, 100%, 40%); 
+}
+.label:active {
+  @include background-image (linear-gradient(top, rgba(230,230,230,1) 0%,rgba(239,239,239,1) 60%,rgba(225,223,226,1) 100%));
+  @include box-shadow(0 0 1px #cfcfcf,inset 0 1px 2px rgba(0,0,0,0.1), 0 1px 0 rgba(255,255,255,0.7));
+  
+  &:before {
+    @include background-image (linear-gradient(top, rgba(230,230,230,0) 0%,rgba(230,230,230,1) 1%,rgba(240,240,240,1) 100%));
+  }
+  &:after {
+    @include box-shadow(-1px 0 0 rgba(255,255,255,0.7));
+  }
+}
+
 </style>
 <body>
 
 <!-- Header -->
-<div class="header"><h4>Now Playing</h4>
+<div class="header"><div class="back-button">
+	<a href="https://smallscreened.github.io" class="label">back</a>
+</div><h4>Now Playing</h4>
 </div>
 
 <!-- Photo Grid -->
@@ -87,7 +165,9 @@ body {
 		<!-- Footer -->
 			
 			<div class="row"><footer id="footer">
-				<li><a href="https://twitter.com/smallscreened" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+				<ul class="icons">
+					<li><a href="https://twitter.com/smallscreened" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://youtube.com/user/gcbird2" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
 					<li><a href="https://github.com/smallscreened" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href=mailto:gcbird2@gmail.com class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
