--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<input type="submit" value="Subscribe" />
 			</form>
 		<!-- Now Playing: Could become a longer body -->
-		<p><a href="https://smallscreened.github.io/playing">Now Playing</a>
+		<p><a href="https://tinyletter.com/smallscreen/archive">Issue Archive</a> | <a href="https://smallscreened.github.io/playing">Now Playing</a>
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
