--- a/playing.html
+++ b/playing.html
@@ -74,7 +74,7 @@ body {
 
 .back-button {
 	position: absolute;
-  text-indent: -15px;
+  text-indent: -10px;
   padding: 5px 0 5px 10px;
   width: 53px;/* modified by label length */
 	overflow: auto;
@@ -148,9 +148,9 @@ body {
 <body>
 
 <!-- Header -->
-<div class="header"><div class="back-button">
-	<a href="https://smallscreened.github.io" class="label">back</a>
-</div><h4>Now Playing</h4>
+<div class="header"><div class="back-button"><ul class="icons">
+	<li><a href="https://smallscreened.github.io" class="icon solid fa-arrow-left"><span class="label">Back</span></a></li></ul></div>
+	<h4>Now Playing</h4>
 </div>
 
 <!-- Photo Grid -->
