--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 			
 			<!-- Testing Another Form -->
 			<form action="https://tinyletter.com/smallscreen" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/smallscreen', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text"  name="emailaddress" value="Email Address" onfocus="if (this.value == 'Email Address') {this.value = '';}" onblur="if (this.value == '') {this.value = 'Email Address';}" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
+			<form style="border:1px solid #ccc;padding:3px;text-align:center;" action="https://tinyletter.com/smallscreen" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/smallscreen', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Enter your email address</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p></form>
+        	
 			
 		<!-- Now Playing: Could become a longer body -->
 		<p><a href="https://tinyletter.com/smallscreen/archive">Issue Archive</a> | <a href="https://smallscreened.github.io/playing">Now Playing</a>
