--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 			</header>
 
 		<!-- Signup Form -->
-			<form id="signup-form" action="https://tinyletter.com/smallscreen" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/smallscreen', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><label for="tlemail"></label><input type="text" name="email" id="tlemail" /><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
-			<form id="signup-form" action="https://tinyletter.com/smallscreen" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/smallscreen', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Enter your email address</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" />
+			<form id="signup-form" action="https://tinyletter.com/smallscreen" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/smallscreen', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
         
         	
 			
