--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</header>
 
 		<!-- Signup Form -->
-			<form id="signup-form" action="https://tinyletter.com/smallscreen" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/smallscreen', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
+			<form action="https://tinyletter.com/smallscreen" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/smallscreen', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><input style="width: 50%;" type="text" style="width:140px" name="email" id="tlemail" /></br><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /></form>
         
         	
 			
