--- a/playing.html
+++ b/playing.html
@@ -166,7 +166,7 @@ body {
 			<div class="row"><footer id="footer">
 				<ul class="icons">
 					<li><a href="https://twitter.com/smallscreened" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://youtube.com/user/gcbird2" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+					<li><a href="https://ko-fi.com/campbellbird" class="icon solid fa-mug-hot"><span class="label">Ko-Fi</span></a></li>
 					<li><a href="https://github.com/smallscreened" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href=mailto:gcbird2@gmail.com class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
