--- a/playing.html
+++ b/playing.html
@@ -149,7 +149,7 @@ body {
 
 <!-- Header -->
 <div class="header"><div class="back-button"><ul class="icons">
-	<li><a href="https://smallscreened.github.io" class="icon solid fa-arrow-left"><span class="label">Back</span></a></li></ul></div>
+	<li><a href="https://smallscreened.github.io" class="icon solid fa-arrow-left"><span class="label">Back</span></a></li></ul></div></br>
 	<h4>Now Playing</br>(Updated Aug 2, 2022)</h4>
 </div>
 
