--- a/playing.html
+++ b/playing.html
@@ -149,14 +149,15 @@ body {
 
 <!-- Header -->
 <div class="header"><div class="back-button"><ul class="icons">
-	<li><a href="https://smallscreened.github.io" class="icon solid fa-arrow-left"><span class="label">Back</span></a></li></ul></div>
-	<h4>Now Playing</h4>
+	<li><a href="https://smallscreened.github.io" class="icon solid fa-arrow-left"><span class="label">Back</span></a></li></ul></div></br>
+	<h4>Now Playing</br>(Updated Aug 3, 2022)</h4>
 </div>
 
 <!-- Photo Grid -->
-<div class="row"><div class="column"><a href="https://apps.apple.com/us/app/pawnbarian/id1510583444?uo=4"><img src="https://is2-ssl.mzstatic.com/image/thumb/Purple122/v4/dc/dc/5d/dcdc5d7f-14f8-3350-6f1b-78406d42a71d/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Pawnbarian</a></br>Free</br>Jan Wojtecki</div>
+<div class="row"><div class="column"><a href="https://apps.apple.com/us/app/card-crawl-adventure/id1571091032?uo=4"><img src="https://is1-ssl.mzstatic.com/image/thumb/Purple112/v4/d3/55/d4/d355d4c7-ccc4-7605-424e-42b0511c5776/AppIcon-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></p><p>Card Crawl Adventure</a></br>Free</br>Arnold Rauers</div>
+<div class="column"><a href="https://apps.apple.com/us/app/descenders/id1604675493?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple112/v4/33/66/08/3366080d-6994-554b-bccc-fc6a4740a5c8/AppIcon-1x_U007emarketing-0-9-0-85-220.png/512x512bb.png"></p><p>Descenders</a></br></br>Noodlecake</div>
+<div class="column"><a href="https://apps.apple.com/us/app/pawnbarian/id1510583444?uo=4"><img src="https://is2-ssl.mzstatic.com/image/thumb/Purple122/v4/dc/dc/5d/dcdc5d7f-14f8-3350-6f1b-78406d42a71d/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Pawnbarian</a></br>Free</br>Jan Wojtecki</div>
 <div class="column"><a href="https://apps.apple.com/us/app/paragon-pioneers/id1599308482?uo=4"><img src="https://is2-ssl.mzstatic.com/image/thumb/Purple112/v4/3f/64/a5/3f64a521-2b68-0df9-dec8-54e7b7117ceb/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Paragon Pioneers</a></br>$3.99</br>Tobias Tenbusch</div>
-<div class="column"><a href="https://apps.apple.com/us/app/blacken-slash/id1604646442?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple112/v4/a6/32/aa/a632aaf4-93f8-8d46-b6a9-4b92352985b4/AppIcon-0-0-1x_U007emarketing-0-0-0-5-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Blacken Slash</a></br>$4.99</br>Mario Kaiser</div>
 <div class="column"><a href="https://apps.apple.com/us/app/dicey-dungeons/id1368013995?uo=4"><img src="https://is2-ssl.mzstatic.com/image/thumb/Purple112/v4/29/66/4e/29664e04-fecf-f75c-a04a-8192b8c9cda9/AppIcon-0-0-1x_U007emarketing-0-0-0-10-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Dicey Dungeons</a></br>$4.99</br>Distractionware Limited</div>
 <div class="column"><a href="https://apps.apple.com/us/app/netflix-into-the-breach/id1616542180?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple122/v4/6e/3b/2f/6e3b2f5b-73d1-8c7a-89fa-c34add2297cb/AppIcon-1x_U007emarketing-0-10-0-85-220.png/512x512bb.png"></p><p>NETFLIX Into the Breach</a></br>Free</br>Netflix, Inc.</div>
 <div class="column"><a href="https://apps.apple.com/us/app/league-of-legends-wild-rift/id1480616990?uo=4"><img src="https://is4-ssl.mzstatic.com/image/thumb/Purple122/v4/60/34/9e/60349e8e-d676-19f6-4729-e0f50ce185f5/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>League of Legends: Wild Rift</a></br>Free</br>Riot Games</div>
@@ -167,7 +168,7 @@ body {
 			<div class="row"><footer id="footer">
 				<ul class="icons">
 					<li><a href="https://twitter.com/smallscreened" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://youtube.com/user/gcbird2" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+					<li><a href="https://ko-fi.com/campbellbird" class="icon solid fa-mug-hot"><span class="label">Ko-Fi</span></a></li>
 					<li><a href="https://github.com/smallscreened" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href=mailto:gcbird2@gmail.com class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
