--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<h1>Small Screen</h1>
-				<p>An Independent App Store Curation Experiment. Site in progress.</p>
+				<p>An Independent App Store Curation Experiment. Sends an email when an exceptional mobile game releases.</p>
 			</header>
 
 		<!-- Signup Form -->
