--- a/playing.html
+++ b/playing.html
@@ -174,7 +174,7 @@ body {
 					<li><a href="https://twitter.com/smallscreened" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://ko-fi.com/campbellbird" class="icon solid fa-mug-hot"><span class="label">Ko-Fi</span></a></li>
 					<li><a href="https://github.com/smallscreened" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href=mailto:gcbird2@gmail.com class="icon fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href=mailto:campbell@smallscreen.info class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Untitled.</br>Credits: <a href="http://html5up.net">HTML5 UP</a>, <a href="https://tinyletter.com">Tiny Letter</a></li>
