--- a/playing-archive-09-20-22.html
+++ b/playing-archive-09-20-22.html
@@ -150,12 +150,14 @@ body {
 <!-- Header -->
 <div class="header"><div class="back-button"><ul class="icons">
 	<li><a href="https://smallscreened.github.io" class="icon solid fa-arrow-left"><span class="label">Back</span></a></li></ul></div></br>
-	<h4>Now Playing</br>(Updated Sep 20, 2022)</h4>
+	<h4>Now Playing</br>(Updated Sep 6, 2022)</h4>
 </div>
 
 <!-- Photo Grid -->
-<div class="row"><div class="column"><a href="https://apps.apple.com/us/app/tallowmere-2/id1271214084?uo=4"><img src="https://is4-ssl.mzstatic.com/image/thumb/Purple112/v4/ba/77/01/ba770144-76f0-17e6-6812-3e074beec8f3/AppIcon-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></p><p>Tallowmere 2</a></br></br>Chris McFarland</div>
-<div class="column"><a href="https://apps.apple.com/us/app/dice-versa/id1641360599?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple112/v4/98/e1/73/98e1738a-79a0-019b-5d9f-61dafa8a15eb/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Dice Versa</a></br>Free</br>Ragtag Games Ltd</div>
+<div class="row"><div class="column"><a href="https://apps.apple.com/us/app/railbound/id1636439801?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple122/v4/78/5e/23/785e23c1-3c96-98a9-ff04-4271193909a8/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Railbound</a></br>$4.99</br>Lukasz Spierewka</div>
+<div class="column"><a href="https://apps.apple.com/us/app/journey-of-greed/id1627207860?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple122/v4/ba/04/5b/ba045bdd-c034-8773-aac6-80fcea667032/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Journey of Greed</a></br>Free</br>X.D. Network Inc.</div>
+<div class="column"><a href="https://apps.apple.com/us/app/iron-marines-invasion/id1620202676?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple112/v4/af/f7/7e/aff77e24-a4ec-b200-0736-3a6481664799/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Iron Marines Invasion</a></br></br>Ironhide S.A.</div>
+<div class="column"><a href="https://apps.apple.com/us/app/scourgebringer/id1552864378?uo=4"><img src="https://is5-ssl.mzstatic.com/image/thumb/Purple122/v4/a2/1c/90/a21c90ed-8549-6f0a-4777-9decb6c0865b/AppIcons-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>ScourgeBringer</a></br>$6.99</br>Plug In Digital</div>
 <div class="column"><a href="https://apps.apple.com/us/app/league-of-legends-wild-rift/id1480616990?uo=4"><img src="https://is4-ssl.mzstatic.com/image/thumb/Purple122/v4/60/34/9e/60349e8e-d676-19f6-4729-e0f50ce185f5/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>League of Legends: Wild Rift</a></br>Free</br>Riot Games</div>
 <div class="column"><a href="https://apps.apple.com/us/app/genshin-impact/id1517783697?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple112/v4/37/08/4d/37084d81-091e-a0d6-c34d-55f830214522/AppIcon-1x_U007emarketing-0-7-0-0-85-220.png/512x512bb.png"></p><p>Genshin Impact</a></br>Free</br>COGNOSPHERE PTE. LTD.</div>
 
