--- a/links.html
+++ b/links.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
     <title>Linktree</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body class="grad1">
     <section>
         <!-- Head-->
         <div class="head-div"> 
-            <img src="lead.png" alt="logo" class="logo-img">
             <h3>Links</h3>
             <h5>Follow Campbell online</h5>
         </div>
