--- a/links.html
+++ b/links.html
@@ -25,6 +25,7 @@
             <p align="center"><a href="https://twitter.com/campbellbirds" class="alink">Twitter</a></p>
             <p align="center"><a href="https://ko-fi.com/campbellbird" class="alink">Ko-fi</a></p>
         </div>
+        <h5 class="copyright"></h5>
         </section>
 </body>
 </html>
