so iterative for these things I'm useless

--- a/music-2022.html
+++ b/music-2022.html
@@ -88,7 +88,7 @@ body {
   visibility: none; opacity:0;
   transition: opacity 0.3s;
 }
-.column img:hover .hovercap {
+.column:hover .hovercap {
   visibility: visible; opacity: 1;
 }   
 
@@ -173,7 +173,7 @@ body {
 <!-- Header -->
 <div class="header"><div class="back-button"><ul class="icons">
 	<li><a href="https://smallscreened.github.io" class="icon solid fa-arrow-left"><span class="label">Back</span></a></li></ul></div></br>
-	<h4>Now Playing</br>(Updated Dec 12, 2022)</h4>
+	<h4>Now Playing</br>Music Test</h4>
 </div>
 
 <!-- Photo Grid -->
