--- a/music-test.html
+++ b/music-test.html
@@ -131,9 +131,15 @@ body{
   flex-wrap: wrap;
   padding: 0;
 }  
+.row #footer {
+  padding-top: 10px;
+  margin-top: 10px;
+} 
 </style>
 <body>
-<h3 align="center">Albums</h3>
+<h2 align="center">6 Albums, 6 Singles (2022)</h2>
+<h3 align="center"><p>Click on an image for a player and links, or listen to everything in one playlist here.</p>
+<p>Albums</p></h3>
 <div class="row">
 <div class="wrapper"><label for="reveal-player1" class="btn"><div class="btn"><img src="https://is2-ssl.mzstatic.com/image/thumb/Music112/v4/05/05/f3/0505f338-9873-feb4-af7f-27a470405e5f/196589246974.jpg/512x512bb.png" style="width:100%"><div class="hovercap">Beyonce<br>Renaissance</div></div></label>
 <input type="checkbox" id="reveal-player1" role="button">
@@ -165,6 +171,8 @@ body{
 
     <div id="player" style="position:absolute;height:100%;width:100%;"><iframe style="position:absolute;top:-100%;" width="100%" height="100%" align="center" src="https://odesli.co/embed/?url=https%3A%2F%2Falbum.link%2Fy%2FPLDlpFJ-xc105oOD2Y9Gsegd1PQbtQ-L-g&theme=dark" frameborder="0" allowfullscreen sandbox="allow-same-origin allow-scripts allow-presentation allow-popups allow-popups-to-escape-sandbox" allow="clipboard-read; clipboard-write"></iframe></div></div>     
 </div>
+<p></p>
+<p></p>
 <h3 align="center">Singles</h3>
 <div class="row">
 <div class="wrapper"><label for="reveal-player7" class="btn"><div class="btn"><img src="https://is2-ssl.mzstatic.com/image/thumb/Music116/v4/f9/cc/8a/f9cc8a17-4fe2-ca3b-59c1-26454691ee20/196626586209.jpg/512x512bb.png" style="width:100%"><div class="hovercap">Totally Enormous Extinct Dinosaurs<br>Never Seen You Dance</div></div></label>
@@ -195,6 +203,19 @@ body{
 <div class="wrapper"><label for="reveal-player12" class="btn"><div class="btn"><img src="https://is3-ssl.mzstatic.com/image/thumb/Music112/v4/28/88/a0/2888a04f-4619-4c1d-7738-4c4b9b697b3e/192152050269.png/512x512bb.png" style="width:100%"><div class="hovercap">Braxe + Falcon<br>Step By Step (feat. Panda Bear)</div></div></label>
 <input type="checkbox" id="reveal-player12" role="button">
 
-    <div id="player" style="position:absolute;height:100%;width:100%;"><iframe style="position:absolute;top:-100%;" width="100%" height="100%" align="center" src="https://odesli.co/embed/?url=https%3A%2F%2Fsong.link%2Fy%2FpqKjFj6YoWM&theme=dark" frameborder="0" allowfullscreen sandbox="allow-same-origin allow-scripts allow-presentation allow-popups allow-popups-to-escape-sandbox" allow="clipboard-read; clipboard-write"></iframe></div></div>     
+    <div id="player" style="position:absolute;height:100%;width:100%;"><iframe style="position:absolute;top:-100%;" width="100%" height="100%" align="center" src="https://odesli.co/embed/?url=https%3A%2F%2Fsong.link%2Fy%2FpqKjFj6YoWM&theme=dark" frameborder="0" allowfullscreen sandbox="allow-same-origin allow-scripts allow-presentation allow-popups allow-popups-to-escape-sandbox" allow="clipboard-read; clipboard-write"></iframe></div></div>
+
+		<!-- Footer -->
+			<div class="row"><footer id="footer">
+				<ul class="icons">
+					<li><a href="https://twitter.com/smallscreened" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://ko-fi.com/campbellbird" class="icon solid fa-mug-hot"><span class="label">Ko-Fi</span></a></li>
+					<li><a href="https://github.com/smallscreened" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href=mailto:campbell@smallscreen.info class="icon fa-envelope"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; namestolen.</br>Credits: <a href="http://html5up.net">HTML5 UP</a>, <a href="https://tinyletter.com">Tiny Letter</a></li>
+				</ul>
+			</footer></div>
 </body>
 </html>
