testing link preview stuff

--- a/live.html
+++ b/live.html
@@ -12,6 +12,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+/* Link Preview Stuff */
+<meta property="og:title" content="Watch Me Stream Games">
+<meta property="og:description"	content="testing? Is this thing on?">
+<meta property="og:url" content="smallscreen.info">
+<meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/2/27/Red_square.svg">
+	
+	
 	</head>
 <body>
 <p align="center"><iframe class="video" title="Mobile Games Streaming" src="https://video.hardlimit.com/videos/embed/ab69b48f-6f94-4ca6-ac0a-541bc9a7403a" width="560" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" frameborder="0"></iframe></p>
