I thought I already pushed this

--- a/live.html
+++ b/live.html
@@ -12,7 +12,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-/* Link Preview Stuff */
+<!--/* Link Preview Stuff */-->
 <meta property="og:title" content="Watch Me Stream Games">
 <meta property="og:description"	content="testing? Is this thing on?">
 <meta property="og:url" content="smallscreen.info">
