--- a/live.html
+++ b/live.html
@@ -15,7 +15,7 @@
 <!--/* Link Preview Stuff */-->
 <meta property="og:title" content="Watch Me Stream Games">
 <meta property="og:description"	content="testing? Is this thing on?">
-<meta property="og:url" content="smallscreen.info">
+<meta property="og:url" content="https://smallscreen.info">
 <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/2/27/Red_square.svg">
 	
 	
