link preview update

--- a/live.html
+++ b/live.html
@@ -13,10 +13,24 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 <!--/* Link Preview Stuff */-->
-<meta property="og:title" content="Watch Me Stream Games">
-<meta property="og:description"	content="testing? Is this thing on?">
-<meta property="og:url" content="https://smallscreen.info">
-<meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/2/27/Red_square.svg">
+<!-- Primary Meta Tags -->
+<title>Small Screen TV</title>
+<meta name="title" content="Small Screen TV">
+<meta name="description" content="Watch Now">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://smallscreen.info/live/">
+<meta property="og:title" content="Small Screen TV">
+<meta property="og:description" content="Watch Now">
+<meta property="og:image" content="assets/images/sstv.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://smallscreen.info/live">
+<meta property="twitter:title" content="Small Screen TV">
+<meta property="twitter:description" content="Watch Now">
+<meta property="twitter:image" content="assets/images/sstv.png">
 	
 	
 	</head>
