New Year New Me

--- a/links.html
+++ b/links.html
@@ -21,8 +21,8 @@
             <a href="https://smallscreen.info" class="alink">Small Screen</a>
             </p>
             <p align="center"><a rel="me" class="alink" href="https://elekk.xyz/@campbell">Mastodon</a></p>
-            <p align="center"><a href="https://cohost.org/campbell" class="alink">Cohost</a></p>
-            <p align="center"><a href="https://twitter.com/campbellbirds" class="alink">Twitter</a></p>
+            <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos" class="alink">Peertube (Video Archive)</a></p>
+            <p align="center"><a href="https://smallscreen.info/live" class="alink">Small Screen TV (Live)</a></p>
             <p align="center"><a href="https://ko-fi.com/campbellbird" class="alink">Ko-fi</a></p>
         </div>
         <h5 class="copyright"></h5>
