--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
         	
 			
 		<!-- Now Playing: Could become a longer body -->
-		<p><a href="https://tinyletter.com/smallscreen/archive">Issue Archive</a> | <a href="https://smallscreened.github.io/playing">Now Playing</a>
+		<p><a href="https://tinyletter.com/smallscreen/archive">Issue Archive</a> | <a href="https://smallscreen.info/playing">Now Playing</a>
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
 					<li><a rel="me" href="https://elekk.xyz/@campbell" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
-					<li><a href="https://twitter.com/smallscreened" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li> <a href="https://smallscreen.info/live" class="icon solid fa-video"><span class="label">Live Stream</span></a></li>
 					<li><a href="https://ko-fi.com/campbellbird" class="icon solid fa-mug-hot"><span class="label">Ko-Fi</span></a></li>
-					<li><a href="https://github.com/smallscreened" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href=mailto:campbell@smallscreen.info class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
