--- a/links.html
+++ b/links.html
@@ -20,9 +20,17 @@
             <p align="center">
             <a href="https://smallscreen.info" class="alink">Small Screen</a>
             </p>
+                        <p align="center">
+            <a href="https://www.148apps.com/author/100108/campbell-bird/" class="alink">Writing</a>
+            </p>
+            <p align="center">
+            <a href="https://www.148apps.com/news/sales/" class="alink">App Store Sales</a>
+            </p>
             <p align="center"><a rel="me" class="alink" href="https://elekk.xyz/@campbell">Mastodon</a></p>
-            <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos" class="alink">Peertube (Video Archive)</a></p>
-            <p align="center"><a href="https://smallscreen.info/live" class="alink">Small Screen TV (Live)</a></p>
+            <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos" class="alink">Peertube</a></p>
+            <p align="center"><a href="https://smallscreen.info/live" class="alink">Streaming</a></p>
+                        <p align="center"><a href="https://gram.social/campbell" class="alink">Pixelfed</a></p>
+                                                <p align="center"><a href="https://smallscreen.info/music" class="alink">Music</a></p>
             <p align="center"><a href="https://ko-fi.com/campbellbird" class="alink">Ko-fi</a></p>
         </div>
         <h5 class="copyright"></h5>
